--- a/arch/arm/configs/wpcm450_defconfig
+++ b/arch/arm/configs/wpcm450_defconfig
@@ -78,6 +78,8 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_NI is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
 # CONFIG_NET_VENDOR_NETRONOME is not set
+# CONFIG_NET_VENDOR_NI is not set
+CONFIG_NUVOTON_EMC=y
 # CONFIG_NET_VENDOR_PENSANDO is not set
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_RENESAS is not set
@@ -92,6 +94,12 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
+CONFIG_LED_TRIGGER_PHY=y
+CONFIG_BROADCOM_PHY=y
+CONFIG_BCM54140_PHY=y
+CONFIG_BCM7XXX_PHY=y
+CONFIG_BCM84881_PHY=y
+CONFIG_BCM87XX_PHY=y
 CONFIG_REALTEK_PHY=y
 # CONFIG_WLAN is not set
 CONFIG_INPUT_FF_MEMLESS=y
@@ -122,6 +130,7 @@ CONFIG_I2C_NPCM=y
 CONFIG_SPI=y
 CONFIG_SPI_WPCM_FIU=y
 CONFIG_SPI_NPCM_PSPI=y
+CONFIG_SPI_WPCM_FIU=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_WPCM450=y
 CONFIG_POWER_SUPPLY=y
