--- a/arch/arm/boot/dts/nuvoton/nuvoton-wpcm450-supermicro-x9sci-ln4f.dts
+++ b/arch/arm/boot/dts/nuvoton/nuvoton-wpcm450-supermicro-x9sci-ln4f.dts
@@ -97,6 +97,19 @@
 	};
 };
 
+&ethernet0 {
+	status = "okay";
+	phy-mode = "rmii";
+	phy-handle = <&phy>;
+};
+
+&mdio0 {
+	phy: phy@5 {
+		compatible = "ethernet-phy-ieee802.3-c22";
+		reg = <5>;
+	};
+};
+
 &serial0 {
 	/*
 	 * Debug serial port. TX is exposed on the right pad of unpopulated
